--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile files('libs/butterknife-7.0.1.jar')
     compile files('libs/okhttp-2.7.5.jar')
     compile files('libs/okio-1.7.0.jar')
+    compile files('libs/gson-2.6.2.jar')
 }
