--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile files('libs/okhttp-2.7.5.jar')
     compile files('libs/okio-1.7.0.jar')
     compile files('libs/gson-2.6.2.jar')
+    compile 'com.android.support:design:23.3.0'
 }
