--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,11 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
     compile files('libs/butterknife-7.0.1.jar')
     compile files('libs/okhttp-2.7.5.jar')
     compile files('libs/okio-1.7.0.jar')
     compile files('libs/gson-2.6.2.jar')
+    compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:support-v4:23.3.0'
 }
