增加了CreateQuizOrSurveyActivity 和 SeeQuestionActivity以及这两个对应的布局

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.MainActivity" />
-        <activity android:name=".view.LoginActivity"></activity>
+        <activity android:name=".view.SeeQuestionActivity" />
+        <activity android:name=".view.CreateQuizOrSurveyActivity" />
+        <activity android:name=".view.LoginActivity">
+
+        </activity>
     </application>
 
 </manifest>
