添加了界面文件，还有弄了登录IP

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,8 @@
         </activity>
         <activity android:name=".view.MainActivity" />
         <activity android:name=".view.SeeQuestionActivity" />
-        <activity android:name=".view.LoginActivity">
-
-        </activity>
+        <activity android:name=".view.LoginActivity"></activity>
+        <activity android:name=".view.CreateQuizActivity"></activity>
     </application>
 
 </manifest>
